--- a/Readme.html
+++ b/Readme.html
@@ -47,7 +47,7 @@
                                             <p>
                                                 64 bit *.msi version can be downloaded <a
                                                     href="https://nodejs.org/download/release/v12.13.0/node-v12.13.0-x64.msi">here.</a>
-                                                If any other formats is the required please go <a
+                                                If any other format is the required please go <a
                                                     href="https://nodejs.org/download/release/v12.13.0/">here</a> and
                                                 download the format.
                                             </p>
