--- a/Readme.html
+++ b/Readme.html
@@ -77,8 +77,8 @@
                                                 <i class="arrow right icon"></i> <i>npm i -g @angular/cli@8.3.23</i>
                                             </p>
                                             <p>
-                                                <i class="arrow right icon"></i> <i>Press enter and wait until the
-                                                    installation is completed</i>
+                                                <i class="arrow right icon"></i> Press enter and wait until the
+                                                installation is completed
                                             </p>
                                             </p>
                                             <p>Now you have installed angular as a global environment in your computer
@@ -104,8 +104,8 @@
                                                 <i class="arrow right icon"></i> <i>npm i -g http-server</i>
                                             </p>
                                             <p>
-                                                <i class="arrow right icon"></i> <i>Press enter and wait until the
-                                                    installation is completed</i>
+                                                <i class="arrow right icon"></i>Press enter and wait until the
+                                                installation is completed
                                             </p>
                                             </p>
                                             <p>Now you have installed http-server as a global node server in your
@@ -134,8 +134,8 @@
                                                     http://localhost:8080?</i>
                                             </p>
                                             <p>
-                                                <i class="arrow right icon"></i> <i>Press enter and wait until the
-                                                    server starts. This will not take long, just a few seconds.</i>
+                                                <i class="arrow right icon"></i>Press enter and wait until the
+                                                server starts. This will not take long, just a few seconds.
                                             </p>
                                             </p>
                                             <p>Now open a browser and enter following url
