--- a/Readme.html
+++ b/Readme.html
@@ -419,6 +419,10 @@
                                             <p><i class="arrow right icon"></i>
                                                 To restart the timer click on <i class="undo icon"></i>
                                             </p>
+                                            <p><i class="arrow right icon"></i>
+                                                If the sounds are too disturbing, you can always toggle the sounds by clicking
+                                                on <i class="volume up icon"></i>
+                                            </p>
                                             <p>
                                                 <i class="arrow right icon"></i>
                                                 When someone gains a point the point can be added to that person on the
