readme style fix

--- a/Readme.html
+++ b/Readme.html
@@ -20,7 +20,7 @@
                 <div class="header">Weekly Blast - Readme</div>
                 <div class="meta">Infosoft</div>
                 <div class="description">
-                    <div class="ui segment">
+                    <div class="">
                         <div class="ui top attached tabular menu">
                             <a class="item active" data-tab="first">Setup Environment</a>
                             <a class="item" data-tab="second">Setup the Game</a>
@@ -31,7 +31,7 @@
                                 <h3>
                                     Setup the Environment
                                 </h3>
-                                <div class="ui segment">
+                                <div class="">
                                     <div class="ui styled accordion">
                                         <div class="active title">
                                             <i class="dropdown icon"></i>
@@ -157,7 +157,7 @@
                                 <h3>
                                     Setup the Game
                                 </h3>
-                                <div class="ui segment">
+                                <div class="">
                                     <div class="ui styled accordion">
                                         <div class="active title">
                                             <i class="dropdown icon"></i>
@@ -352,7 +352,7 @@
                         </div>
                         <div class="ui bottom attached tab segment" data-tab="third">
                             <div id="hstgm">
-                                <div class="ui segment">
+                                <div class="">
                                     <div class="ui styled accordion">
                                         <div class="active title">
                                             <i class="dropdown icon"></i>
