--- a/Readme.html
+++ b/Readme.html
@@ -352,6 +352,9 @@
                         </div>
                         <div class="ui bottom attached tab segment" data-tab="third">
                             <div id="hstgm">
+                                <h3>
+                                    Host the Game
+                                </h3>
                                 <div class="">
                                     <div class="ui styled accordion">
                                         <div class="active title">
