Reviewed the readme after the new version

--- a/Readme.html
+++ b/Readme.html
@@ -177,7 +177,8 @@
                                                 <i class="arrow right icon"></i> <i>src\assets\user_files</i>
                                             </p>
                                             <p>
-                                                Find the .json file named game_list.json
+                                                Find the .json file named game_list.json (This JSON can be stored
+                                                anywhere and upload when running the application)
                                             </p>
                                             <p>
                                                 Open the JSON in a text editor
@@ -385,8 +386,15 @@
                                                 Then click start. This will divide all in to teams randomly.
                                             </p>
                                             <p><i class="arrow right icon"></i>
-                                                Then click download as *.csv and download the file in to path
-                                                src/assets/user_files. Replace if previous file is already there.
+                                                Then click download as *.csv and download the file to your computer
+                                            </p>
+                                            <p><i class="arrow right icon"></i>
+                                                Now click the "Upload Team" blue color button and upload the *.csv file
+                                                downloaded previously.
+                                            </p>
+                                            <p><i class="arrow right icon"></i>
+                                                Now click the "Upload Game" blue color button and upload the *.json file
+                                                prepared previously.
                                             </p>
                                             <p><i class="arrow right icon"></i>
                                                 Navigate to /games by clicking Games on the upper right corner.
@@ -423,7 +431,8 @@
                                                 To restart the timer click on <i class="undo icon"></i>
                                             </p>
                                             <p><i class="arrow right icon"></i>
-                                                If the sounds are too disturbing, you can always toggle the sounds by clicking
+                                                If the sounds are too disturbing, you can always toggle the sounds by
+                                                clicking
                                                 on <i class="volume up icon"></i>
                                             </p>
                                             <p>
