--- a/Readme.html
+++ b/Readme.html
@@ -132,6 +132,7 @@
                                             <p>
                                                 <i class="arrow right icon"></i> <i>http-server --gzip --proxy
                                                     http://localhost:8080?</i>
+                                            <p>Note: If the port is busy try any other port rather than 8080</p>
                                             </p>
                                             <p>
                                                 <i class="arrow right icon"></i>Press enter and wait until the
@@ -375,7 +376,7 @@
                                                 corner.
                                             </p>
                                             <p><i class="arrow right icon"></i>
-                                                Add the people available for the session one the right panel by
+                                                Add the people available for the session on the right panel by
                                                 clicking <i class="plus icon"></i>
                                             </p>
                                             <p><i class="arrow right icon"></i>
@@ -397,7 +398,8 @@
                                                 prepared previously.
                                             </p>
                                             <p><i class="arrow right icon"></i>
-                                                Navigate to /games by clicking Games on the upper right corner.
+                                                Navigate to /games by clicking "Start Battle" button or Games on the
+                                                upper right corner.
                                             </p>
                                         </div>
                                         <div class=" title">
@@ -433,7 +435,7 @@
                                             <p><i class="arrow right icon"></i>
                                                 If the sounds are too disturbing, you can always toggle the sounds by
                                                 clicking
-                                                on <i class="volume up icon"></i>
+                                                on <i class="volume up icon"></i> upper right corner
                                             </p>
                                             <p>
                                                 <i class="arrow right icon"></i>
