--- a/Readme.html
+++ b/Readme.html
@@ -15,6 +15,15 @@
             width: 600px;
         }
     </style>
+    <script>
+        function goToTab(tab) {
+            $('.menu .item').tab(
+                'change tab', 'second'
+            );
+
+            $('.accordion').accordion('open', 3);
+        }
+    </script>
 </head>
 
 <body>
@@ -84,7 +93,10 @@
                                                 Run the Game
                                             </h4>
                                             <p>
-                                                Just navigate to 2nd Tab last step
+                                                Just navigate to 2nd Tab, last step <i
+                                                    class="hand point right outline icon"></i> <span
+                                                    class="ui basic button" onClick="goToTab('second')">click
+                                                    here</span>
                                             </p>
                                         </div>
                                     </div>
@@ -185,7 +197,7 @@
                                                 computer.
                                             </p>
                                         </div>
-                                        <div class="title">
+                                        <div class="title" id="run">
                                             <i class="dropdown icon"></i>
                                             Run
                                         </div>
